--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             </li>
         </ul>
     </div>
+
+    <footer>&#169;Luise Brandenburger 2021</footer>
+
+
     <script src="/js/app.js" type="module" crossorigin="use-credentials"></script>
 </body>
 </html>
