--- a/index.html
+++ b/index.html
@@ -2,21 +2,41 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rock+3D&display=swap" rel="stylesheet">  
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Hammersmith+One&family=Press+Start+2P&family=Prompt&family=Righteous&family=Rock+3D&family=Source+Code+Pro&family=Space+Mono&family=Staatliches&display=swap" rel="stylesheet"> 
+<link rel="stylesheet" href="/css/style.css">
+
     <title></title>
 </head>
 <body>
 
+    <h1 id="page-title">HELLO, I 💘 IMAGES!</h1>
+
     <div id="main">
-        <h1 id="page-title">HELLO, I 💘 IMAGES!</h1>
+        <!-- ************************* VUE START ********************** -->
+
+        <form class="input-form">
+            <input v-model="title" type="text" name="title" id="" placeholder="title">
+            <input v-model="username" type="text" name="username" id="" placeholder="username">
+            <input v-model="description" type="text" name="description" id="" placeholder="description">
+            <input type="file" name="file" id="" accept="image/*">
+            <button @click.prevent="clickHandler" >Submit</button>
+        </form>
+
         <ul v-if="images.length > 0" class="wrapper-grid">
             <li v-for="image in images" :key="image.id"> 
                 <div class="img-card">
-                    <img v-bind:src="image.url" alt="image.description">
-            <p class="img-title">{{image.title}}</p>
+                    <img :src="image.url" :alt="image.description">
+                    <p class="img-title">{{image.title}}</p>
                 </div>
             </li>
         </ul>
+
+
+        <!-- ************************* VUE END ********************** -->
     </div>
 
     <footer>&#169;Luise Brandenburger 2021</footer>
