--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input v-model="title" type="text" name="title" id="" placeholder="title">
             <input v-model="username" type="text" name="username" id="" placeholder="username">
             <input v-model="description" type="text" name="description" id="" placeholder="description">
-            <input type="file" name="file" id="" accept="image/*">
+            <input @change="fileSelectHandler" type="file" name="file" id="" accept="image/*">
             <button @click.prevent="clickHandler" >Submit</button>
         </form>
 
