--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
     <div id="main">
         <!-- ************************* VUE START ********************** -->
+        <display-img-modal></display-img-modal>
+
 
         <form class="input-form">
             <input v-model="title" type="text" name="title" id="" placeholder="title">
@@ -24,16 +26,17 @@
             <input v-model="description" type="text" name="description" id="" placeholder="description">
             <input @change="fileSelectHandler" type="file" name="file" id="" accept="image/*">
             <button @click.prevent="clickHandler" >Submit</button>
-        </form>
+            <div v-if="spinner"><div class="dots-3"></div></div>
+            <!-- <div v-else="spinner"></div> -->
 
-        <ul class="wrapper-grid">
-            <li v-for="image in images" :key="image.id"> 
-                <div class="img-card">
+        </form>
+        
+        <section class="wrapper-grid">
+            <div v-for="image in images" :key="image.id" class="img-card" @click="openImgModal">
                     <img :src="image.url" :alt="image.description">
                     <p class="img-title">{{image.title}}</p>
-                </div>
-            </li>
-        </ul>
+            </div>
+        </section>
 
 
         <!-- ************************* VUE END ********************** -->
