--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <h1 id="page-title">HELLO, I 💘 IMAGES!</h1>
+    <h1 id="page-title">THE WORLD OF ROGER DEAN</h1>
     
     <div id="main">
         <!-- ************************* VUE START ********************** -->
