added comment component and db post request for comment input

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </div>
         </section>
 
+        <button class="more-btn" @click="showMoreImg" >More</button>
 
         <!-- ************************* VUE END ********************** -->
     </div>
