--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;600;900&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Rock+3D&display=swap" rel="stylesheet">  
 <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="/css/style.css">
 
@@ -37,7 +35,7 @@
             </div>
         </section>
 
-        <button class="more-btn" @click="showMoreImg" >More</button>
+        <button v-if="displayBtn" class="more-btn" @click="showMoreImg" >More</button>
 
         <!-- ************************* VUE END ********************** -->
     </div>
